WexGit/Wex_DX/force-app/main/default/objects/Calabrio_Integration_Batch__mdt/Calabrio_Integration_Batch__mdt.object-meta.xml
<CustomObject>
    <description>for use with Calabrio integration</description>
    <label>Calabrio Integration Batch</label>
    <pluralLabel>Calabrio Integration Batches</pluralLabel>
</CustomObject>