WexGit/Wex_DX/force-app/main/default/objects/Calabrio_Integration_Batch__mdt/fields/API_AuthenticationEndpoint__c.field-meta.xml
<CustomField>
    <fullName>API_AuthenticationEndpoint__c</fullName>
    <description>for Calabrio integration</description>
    <inlineHelpText>Calabrio endpoint</inlineHelpText>
    <label>API_AuthenticationEndpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>