WexGit/Wex_DX/force-app/main/default/objects/Calabrio_Integration_Batch__mdt/fields/API_AuthenticationUserID__c.field-meta.xml
<CustomField>
    <fullName>API_AuthenticationUserID__c</fullName>
    <description>for Calabrio integration</description>
    <label>API_AuthenticationUserID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>