WexGit/Wex_DX/force-app/main/default/objects/Calabrio_Integration_Batch__mdt/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <description>for Calabrio integratoin</description>
    <inlineHelpText>accepts 5 digits but expect 300 due to SFDC limits</inlineHelpText>
    <label>Batch_Size</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>